update github repo link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="titlecontainer">
 			<h1>SolarSim</h1>
 			<p>click & drag to pan, scroll to zoom <br>click on planets or buttons to find out more</p>
-			<p><a href="https://github.com/solarsim/solarsim.github.io/tree/master" target="_blank">view on github</a></p>
+			<p><a href="https://github.com/rstumbaugh/solarsim" target="_blank">view on github</a></p>
 			<i class="fa fa-backward fa-lg" id="rewind"></i>
 			<i class="fa fa-pause fa-lg" id="pause"></i>
 			<i class="fa fa-forward fa-lg" id="forward"></i>
